--- a/front/src/app/core/sidebar/sidebar.component.html
+++ b/front/src/app/core/sidebar/sidebar.component.html
@@ -8,6 +8,10 @@
             label="Loans Requests" class="p-button-outlined p-button-info"></button>
         <button *ngIf="role == 'WORKER'" [routerLink]="'/requests/account'" pButton pRipple type="button"
             label="Accounts Requests" class="p-button-outlined p-button-info"></button>
+        <button *ngIf="role == 'ADMIN'" [routerLink]="'users/add-worker'" pButton pRipple type="button" label="Add New Worker"
+            class="p-button-outlined p-button-info"></button>
+        <button *ngIf="role == 'ADMIN'" [routerLink]="'branches/create-branch'" pButton pRipple type="button" label="Create New Branch"
+            class="p-button-outlined p-button-info"></button>
         <button [routerLink]="'/profile'" pButton pRipple type="button" icon="pi pi-user"
             class="p-button-rounded p-button-info p-button-outlined"></button>
         <button pButton pRipple type="button" icon="pi pi-sign-out"
