Refactoring of the account API code completed and implementation of account-related features.
- Account controller separated intro 3 controllers
- Account preview page added to user
- Account requests page added for worker
- Closing account implemented

--- a/front/src/app/app/home/account-type/account-type.component.html
+++ b/front/src/app/app/home/account-type/account-type.component.html
@@ -31,6 +31,11 @@
                     <button pButton type="button" icon="pi pi-trash" class="p-button-danger" label="Delete"
                         (click)="confirmDelete(accountType.id)"></button>
                 </div>
+                <!-- Dugme za podnošenje zahteva -->
+                <div *ngIf="role === 'USER'" class="card-actions">
+                    <button pButton type="button" icon="pi pi-check-square" class="p-button-success"
+                        label="Podnesi Zahtev" (click)="confirmAccountRequest(accountType)"></button>
+                </div>
             </div>
         </p-card>
     </div>
