--- a/front/src/app/app/home/account-type/account-type.component.html
+++ b/front/src/app/app/home/account-type/account-type.component.html
@@ -2,10 +2,10 @@
     <!-- Kontejner za Pretragu, Sortiranje i Dropdown -->
     <div class="search-sort-container">
         <!-- Pretraga -->
-        <input type="text" pInputText placeholder="Pretraži..." (input)="searchTerm=$event.target.value; search()">
+        <input type="text" pInputText placeholder="Search..." (input)="searchTerm=$event.target.value; search()">
 
         <!-- Dropdown meni za izbor polja za sortiranje -->
-        <p-dropdown [options]="sortOptions" [(ngModel)]="sortField" placeholder="Sortiraj po"
+        <p-dropdown [options]="sortOptions" [(ngModel)]="sortField" placeholder="Sort by"
             (onChange)="sortAccountTypes()"></p-dropdown>
 
         <!-- Ikonice za uzlazni i silazni redosled -->
@@ -34,7 +34,7 @@
                 <!-- Dugme za podnošenje zahteva -->
                 <div *ngIf="role === 'USER'" class="card-actions">
                     <button pButton type="button" icon="pi pi-check-square" class="p-button-success"
-                        label="Podnesi Zahtev" (click)="confirmAccountRequest(accountType)"></button>
+                        label="Make A Request" (click)="confirmAccountRequest(accountType)"></button>
                 </div>
             </div>
         </p-card>
