--- a/front/src/app/app/home/branch-appointments/branch-appointments.component.html
+++ b/front/src/app/app/home/branch-appointments/branch-appointments.component.html
@@ -3,17 +3,17 @@
 
     <div *ngIf="!loading" class="card">
         <div class="dropdown-container">
-            <p-dropdown [options]="branches" [(ngModel)]="selectedBranch" placeholder="Izaberite filijalu"
+            <p-dropdown [options]="branches" [(ngModel)]="selectedBranch" placeholder="Choose Branch"
                 (onChange)="onBranchSelect()"></p-dropdown>
         </div>
 
         <div *ngIf="selectedBranch && !noAvailableDates" class="dropdown-container">
-            <p-dropdown [options]="availableDates" [(ngModel)]="selectedDate" placeholder="Izaberite datum"
+            <p-dropdown [options]="availableDates" [(ngModel)]="selectedDate" placeholder="Choose Date"
                 (onChange)="onDateChange()"></p-dropdown>
         </div>
 
         <div *ngIf="noAvailableDates" class="no-available-dates">
-            Nema dostupnih termina.
+            No Available Dates
         </div>
 
         <div class="appointments-grid">
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <button *ngIf="selectedAppointment" pButton type="button" label="Zakaži" (click)="bookAppointment()"
+        <button *ngIf="selectedAppointment" pButton type="button" label="Confirm" (click)="bookAppointment()"
             [disabled]="bookingInProgress"></button>
     </div>
 </div>
