--- a/front/src/app/app/home/branches/branches.component.html
+++ b/front/src/app/app/home/branches/branches.component.html
@@ -2,7 +2,7 @@
     <!-- Kontejner za Pretragu, Sortiranje i Dropdown -->
     <div class="search-sort-container">
         <!-- Pretraga -->
-        <input type="text" pInputText placeholder="Pretraži..." (input)="searchTerm=$event.target.value; search()">
+        <input type="text" pInputText placeholder="Search..." (input)="searchTerm=$event.target.value; search()">
 
         <!-- Dropdown meni za izbor polja za sortiranje -->
         <p-dropdown [options]="sortOptions" [(ngModel)]="sortField" placeholder="Sortiraj po"
@@ -12,7 +12,15 @@
         <button pButton (click)="toggleSortOrder()">
             <i class="pi" [ngClass]="{'pi-sort-amount-up-alt': ascending, 'pi-sort-amount-down': !ascending}"></i>
         </button>
+        <button *ngIf="role == 'ADMIN'" [routerLink]="'/branches/create-branch'" pButton pRipple type="button"
+        icon="pi pi-plus" label="Create Branch Type" class="p-button-outlined p-button-info"></button>
+
+        <!-- Dugme za podnošenje zahteva -->
+        <button *ngIf="role == 'USER'" (click)="viewAppointments()" pButton pRipple type="button"
+        label="Make An Appointments" class="p-button-outlined p-button-info"></button>
     </div>
+
+    <p-confirmDialog></p-confirmDialog>
 
     <!-- Lista Branches prikazana kao kartice -->
     <div class="branch-grid">
@@ -20,11 +28,14 @@
             <p-card>
                 <div class="branch-details">
                     <h3>{{ branch.name }}</h3>
-                    <p>Adresa: {{ branch.address }}</p>
-                    <p>Telefon: {{ branch.phoneNumber }}</p>
-                    <p>Radno vreme: {{ branch.openingTime }} - {{ branch.closingTime }}</p>
-                    <button pButton type="button" label="Pregled Termina" (click)="viewAppointments(branch.id)"
-                        class="p-button-success view-appointments-button"></button>
+                    <p>Address: {{ branch.address }}</p>
+                    <p>Phone: {{ branch.phoneNumber }}</p>
+                    <p>Open: {{ branch.openingTime.slice(0, -3) }} - {{ branch.closingTime.slice(0, -3) }}</p>
+
+                    <div *ngIf="role === 'ADMIN'" class="card-actions">
+                        <button pButton type="button" icon="pi pi-trash" class="p-button-danger" label="Delete"
+                            (click)="confirmDelete(branch.id)"></button>
+                    </div>
                 </div>
             </p-card>
         </div>
