--- a/front/src/app/app/home/loans/loans.component.scss
+++ b/front/src/app/app/home/loans/loans.component.scss
@@ -27,3 +27,24 @@ p-card {
 p-paginator {
     margin-top: 20px;
 }
+
+.loan-type-item {
+    margin-bottom: 1rem;
+    /* Razmak između kartica */
+}
+
+.card-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-details {
+    flex-grow: 1;
+    /* Osigurava da sadržaj zauzima dostupan prostor */
+}
+
+.card-actions {
+    margin-left: 10px;
+    /* Razmak između detalja kartice i dugmeta za brisanje */
+}
