--- a/front/src/app/my-appointments/my-appointments.component.html
+++ b/front/src/app/my-appointments/my-appointments.component.html
@@ -1,14 +1,14 @@
 <div class="user-appointments-container">
-    <h2>Zakazani termini</h2>
+    <h2>Scheduled Appointments</h2>
 
     <div *ngFor="let appointment of appointments" class="appointment-card">
         <p-card>
             <div class="appointment-date">
-                Termin: {{ appointment.appointmentDate | date:'fullDate' }}
+                Date: {{ appointment.appointmentDate | date:'fullDate' }}
             </div>
-            Vreme: {{ appointment.appointmentDate | date:'shortTime' }}
-            <div>Filijala: {{ appointment.branch.name }}</div>
-            <div>Adresa: {{ appointment.branch.address }}</div>
+            Time: {{ appointment.appointmentDate | date:'shortTime' }}
+            <div>Branch: {{ appointment.branch.name }}</div>
+            <div>Address: {{ appointment.branch.address }}</div>
             <!-- Dodajte ostale informacije o filijali ili terminu ako je potrebno -->
         </p-card>
     </div>
